--- a/color-flood-3d/src/pages/SimulationAnalysisPage.css
+++ b/color-flood-3d/src/pages/SimulationAnalysisPage.css
@@ -63,8 +63,8 @@
 /* Page Content */
 .page-content {
   padding: 40px 20px;
-  max-width: 1400px;
   margin: 0 auto;
+  width: 100%;
 }
 
 /* Simulation Setup */
