--- a/color-flood-3d/src/games/gravity-cascade/GravityCascade.module.css
+++ b/color-flood-3d/src/games/gravity-cascade/GravityCascade.module.css
@@ -14,32 +14,36 @@
   bottom: 0 !important;
   width: 100% !important;
   height: 100% !important;
+  z-index: 1;
 }
 
 .canvasContainer > div {
   width: 100% !important;
   height: 100% !important;
+  position: relative !important;
 }
 
 .canvasContainer canvas {
-  position: absolute !important;
-  top: 0 !important;
-  left: 0 !important;
+  display: block !important;
   width: 100% !important;
   height: 100% !important;
-  display: block !important;
+  touch-action: none; /* Prevent default touch behaviors */
 }
 
 .uiOverlay {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
   z-index: 10;
 }
 
-.uiOverlay > * {
+/* Only make specific UI elements interactive */
+.uiOverlay button,
+.uiOverlay input,
+.uiOverlay select,
+.uiOverlay .clickable {
   pointer-events: auto;
 }
